Fix #17 - Fonts too small on mobile

--- a/igcviewer.css
+++ b/igcviewer.css
@@ -1,4 +1,5 @@
-body {
+html {
+    font-size: 16px;
     font-family: sans-serif;
 }
 
